--- a/src/styles/4.components/destination-content.scss
+++ b/src/styles/4.components/destination-content.scss
@@ -1,4 +1,7 @@
-.grid-container--destination > .destination-content{
-    grid-area: content;
-    align-self: center;
+.grid-container--destination > .destination-content {
+  grid-area: content;
+  align-self: center;
+  p:not([class]) {
+    max-width: 44ch;
+  }
 }
