--- a/src/styles/4.components/index.scss
+++ b/src/styles/4.components/index.scss
@@ -10,3 +10,5 @@
 @forward "./destination-img.scss";
 @forward "./destination-content.scss";
 @forward "./destination-info.scss";
+@forward "./crew-info.scss";
+@forward "./crew-img.scss";
