--- a/src/styles/3.elements/container.scss
+++ b/src/styles/3.elements/container.scss
@@ -5,9 +5,6 @@
 }
 
 .grid-container {
-  p:not([class]) {
-    max-width: 50ch;
-  }
   padding-inline: 1.5rem;
   text-align: center;
   display: grid;
@@ -15,16 +12,21 @@
   padding-block-end: 1.5rem;
   @media (min-width: 64em) {
     text-align: left;
-    grid-template-columns:
-      minmax(2rem, 1fr)
-      repeat(2, minmax(0, 40rem))
-      minmax(2rem, 1fr);
+
     column-gap: var(--container-gap, 2rem);
   }
 }
 
 .grid-container--home {
+  p:not([class]) {
+    max-width: 50ch;
+  }
   @media (min-width: 64em) {
+    grid-template-columns:
+      minmax(2rem, 1fr)
+      minmax(0, 60rem)
+      minmax(0, 35rem)
+      minmax(2rem, 1fr);
     padding-bottom: max(6rem, 20vh);
     align-items: end;
     > *:first-child {
@@ -38,18 +40,49 @@
 
 .grid-container--destination {
   --flow-space: 1.5rem;
-  grid-template-areas: 
-    'title'
-    'image'
-    'tabs'
-    'content';
+  grid-template-areas:
+    "title"
+    "image"
+    "tabs"
+    "content";
 
   @media (min-width: 64em) {
+    grid-template-columns:
+      minmax(2rem, 1fr)
+      minmax(0, 40rem)
+      minmax(0, 40rem)
+      minmax(2rem, 1fr);
     justify-items: start;
     align-content: start;
-    grid-template-areas: 
-    '. title title .'
-    '. image tabs .'
-    '. image content .';
+    grid-template-areas:
+      ". title title ."
+      ". image tabs ."
+      ". image content .";
+  }
+}
+
+.grid-container--crew {
+  grid-template-areas:
+    "title" 
+    "content" 
+    "dots" 
+    "image";
+
+  @media (min-width: 48em) {
+    --flow-space: 2rem;
+  }
+
+  @media (min-width: 64em) {
+    grid-template-columns:
+    minmax(2rem, 1fr)
+    minmax(0, 40rem)
+    minmax(0, 40rem)
+    minmax(2rem, 1fr);
+    justify-items: start;
+    align-content: start;
+    grid-template-areas:
+      ". title title ."
+      ". content image ."
+      ". dots image .";
   }
 }
