--- a/src/styles/4.components/dot-indicators.scss
+++ b/src/styles/4.components/dot-indicators.scss
@@ -1,17 +1,27 @@
+.dot-indicators {
+  --gap: 2rem;
+}
+
 .dot-indicators > * {
-    cursor: pointer;
-    border: 0;
-    border-radius: 50%;
-    padding: .5em;
-    background-color: rgba( var(--clr-light), 0.25);
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  padding: 0.6em;
+  background-color: rgba(var(--clr-light), 0.25);
+  @media(min-width: 64em) {
+  padding: 0.5em;
   }
-  
-  .dot-indicators > *:hover,
-  .dot-indicators > *:focus {
-    background-color: rgba( var(--clr-light), 0.5);
-  }
-  
-  .dot-indicators > [aria-selected="true"] {
-    background-color: rgba( var(--clr-light), 1);
-  }
-  
+}
+
+.dot-indicators > *:hover,
+.dot-indicators > *:focus {
+  background-color: rgba(var(--clr-light), 0.5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+  background-color: rgba(var(--clr-light), 1);
+}
+
+.grid-container--crew > .dot-indicators {
+  grid-area: dots;
+}
