--- a/src/styles/3.elements/background.scss
+++ b/src/styles/3.elements/background.scss
@@ -40,6 +40,7 @@
     }
 
     &.background-technology {
+      background-position: top right;
       background-image: url(./assets/technology/background-technology-tablet.jpg);
     }
   }
@@ -57,6 +58,7 @@
     }
 
     &.background-technology {
+      background-position: top right;
       background-image: url(./assets/technology/background-technology-desktop.jpg);
     }
   }
