--- a/src/styles/4.components/index.scss
+++ b/src/styles/4.components/index.scss
@@ -12,3 +12,6 @@
 @forward "./destination-info.scss";
 @forward "./crew-info.scss";
 @forward "./crew-img.scss";
+@forward "./numbered-btn.scss";
+@forward "./technology-img.scss";
+@forward "./technology-info.scss";
