--- a/src/styles/4.components/numbered-title.scss
+++ b/src/styles/4.components/numbered-title.scss
@@ -4,6 +4,7 @@
   text-transform: uppercase;
   letter-spacing: 4px;
   align-self: start;
+  padding-inline-start: 1.5rem;
   grid-area: title;
   & span {
     margin-inline-end: 0.5em;
