--- a/src/styles/2.generic/resets.scss
+++ b/src/styles/2.generic/resets.scss
@@ -27,6 +27,8 @@ img,
 picture {
   max-width: 100%;
   display: block;
+  padding: 0;
+  margin: 0;
 }
 
 /* make form elements easier to work with */
