--- a/src/styles/3.elements/background.scss
+++ b/src/styles/3.elements/background.scss
@@ -9,57 +9,57 @@
   background-size: cover;
 
   &.background-home {
-    background-image: url(../../../public/assets/home/background-home-mobile.jpg);
+    background-image: url(./assets/home/background-home-mobile.jpg);
     background-position: bottom center;
   }
   &.background-destination {
-    background-image: url(../../../public/assets/destination/background-destination-mobile.jpg);
+    background-image: url(./assets/destination/background-destination-mobile.jpg);
     background-position: center top;
   }
 
   &.background-crew {
-    background-image: url(../../../public/assets/crew/background-crew-mobile.jpg);
+    background-image: url(./assets/crew/background-crew-mobile.jpg);
   }
 
   &.background-technology {
-    background-image: url(../../../public/assets/technology/background-technology-mobile.jpg);
+    background-image: url(./assets/technology/background-technology-mobile.jpg);
   }
 
   @media (min-width: 48em) {
     &.background-home {
-      background-image: url(../../../public/assets/home/background-home-tablet.jpg);
+      background-image: url(./assets/home/background-home-tablet.jpg);
       background-position: center center;
     }
 
     &.background-destination {
-      background-image: url(../../../public/assets/destination/background-destination-tablet.jpg);
+      background-image: url(./assets/destination/background-destination-tablet.jpg);
     }
 
     &.background-crew {
-      background-image: url(../../../public/assets/crew/background-crew-tablet.jpg);
+      background-image: url(./assets/crew/background-crew-tablet.jpg);
     }
 
     &.background-technology {
       background-position: top right;
-      background-image: url(../../../public/assets/technology/background-technology-tablet.jpg);
+      background-image: url(./assets/technology/background-technology-tablet.jpg);
     }
   }
 
   @media (min-width: 64em) {
     &.background-home {
-      background-image: url(../../../public/assets/home/background-home-desktop.jpg);
+      background-image: url(./assets/home/background-home-desktop.jpg);
     }
     &.background-destination {
-      background-image: url(../../../public/assets/destination/background-destination-desktop.jpg);
+      background-image: url(./assets/destination/background-destination-desktop.jpg);
     }
 
     &.background-crew {
-      background-image: url(../../../public/assets/crew/background-crew-desktop.jpg);
+      background-image: url(./assets/crew/background-crew-desktop.jpg);
     }
 
     &.background-technology {
       background-position: top right;
-      background-image: url(../../../public/assets/technology/background-technology-desktop.jpg);
+      background-image: url(./assets/technology/background-technology-desktop.jpg);
     }
   }
 }
