--- a/src/styles/4.components/index.scss
+++ b/src/styles/4.components/index.scss
@@ -15,3 +15,4 @@
 @forward "./numbered-btn.scss";
 @forward "./technology-img.scss";
 @forward "./technology-info.scss";
+@forward "./loading-layout.scss";
