--- a/src/styles/4.components/numbered-btn.scss
+++ b/src/styles/4.components/numbered-btn.scss
@@ -17,7 +17,7 @@
       border-color: rgb(var(--clr-light));
     }
   }
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     flex-direction: column;
     --gap: 2rem;
     font-size: 2rem;
