--- a/src/styles/4.components/primary-navigation.scss
+++ b/src/styles/4.components/primary-navigation.scss
@@ -22,10 +22,10 @@
     transform: translateX(100%);
     transition: transform 400ms ease-in-out;
   }
-  @media (min-width: 35em) {
+  @media (min-width: 35rem) {
     padding-inline: clamp(3rem, 10vw, 6rem);
   }
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     margin-block: 2rem;
   }
 }
