--- a/src/styles/2.generic/typography.scss
+++ b/src/styles/2.generic/typography.scss
@@ -16,7 +16,7 @@
   --ff-sans-cond: "Barlow Condensed", sans-serif;
   --ff-sans-normal: "Barlow", sans-serif;
 
-  @media (min-width: 48em) {
+  @media (min-width: 48rem) {
     /* font-sizes */
     --fs-800: 5rem;
     --fs-700: 2.5rem;
@@ -25,7 +25,7 @@
     --fs-400: 1rem;
   }
 
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     /* Font-sizes */
     --fs-800: 6.25rem;
     --fs-700: 3.5rem;
