--- a/src/styles/4.components/crew-info.scss
+++ b/src/styles/4.components/crew-info.scss
@@ -11,7 +11,7 @@
       max-width: 50ch;
     }
   }
-  @media (max-width: 35em){
+  @media (max-width: 35rem){
     padding-inline: 1.5rem;
   }
 }
