--- a/src/styles/4.components/dot-indicators.scss
+++ b/src/styles/4.components/dot-indicators.scss
@@ -8,7 +8,7 @@
   border-radius: 50%;
   padding: 0.6em;
   background-color: rgba(var(--clr-light), 0.25);
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     padding: 0.5em;
   }
 }
