--- a/src/styles/4.components/numbered-title.scss
+++ b/src/styles/4.components/numbered-title.scss
@@ -11,11 +11,11 @@
     font-weight: 700;
     color: rgba(var(--clr-light), 0.25);
   }
-  @media (min-width: 35em) {
+  @media (min-width: 35rem) {
     justify-self: start;
     margin-block-start: 2rem;
   }
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     padding-block-end: clamp(1rem, 10vh, 10rem);
   }
 }
