--- a/src/styles/4.components/technology-img.scss
+++ b/src/styles/4.components/technology-img.scss
@@ -1,7 +1,7 @@
 .grid-container--technology > picture {
   grid-area: image;
   padding-inline: 0;
-  @media (min-width: 64em) {
+  @media (min-width: 64rem) {
     justify-self: end;
   }
 }
