--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -3,14 +3,15 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+html {
   height: 100%;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Lugrasimo", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(45deg, #23292c, #4b88a7);
