--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+/* :root[data-theme="corporate"] {
+  --test-color: red;
+}
+
+:root[data-theme="business"] {
+  --test-color: blue;
+}
+
+body {
+  background-color: var(--test-color);
+} */
+
+
+.app-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  padding-block: 30px;
+  box-sizing: border-box; /* Includes padding in the element's total width and height */
+}
+
 .chat-container {
   /* width: 80%;
   max-width: 600px;
   margin: 20px auto;
   font-family: Arial, sans-serif; */
 
-  width: 80%;
+  width: 90%;
   max-width: 600px;
   margin: 40px auto;
-  padding: 20px;
+  padding: 17px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   background-color: white;
   border-radius: 10px;
@@ -25,33 +46,33 @@ h1 {
 
 .chatbox {
   height: 300px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ffffff; */
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
   padding: 10px;
-  background: #f9f9f9;
+  /* background: #f9f9f9; */
   margin-bottom: 20px;
 }
 
 .user-msg {
   text-align: right;
-  color: blue;
+  color: rgb(131, 131, 131);
 }
 
 .bot-msg {
   text-align: left;
-  color: green;
+  color: rgb(43, 43, 43);
 }
 
 .input-area {
   display: flex;
-  /* align-items: center; */
   gap: 10px;
 }
 
 .input-area input {
   flex-grow: 1;
   padding: 10px;
-  border: 2px solid #ccc;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   font-size: 16px;
 }
@@ -60,8 +81,8 @@ h1 {
   min-width: 100px; /* Minimum width for the button */
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #007bff;
-  color: white;
+  /* background-color: #007bff; */
+  /* color: white; */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -69,7 +90,18 @@ h1 {
 }
 
 .input-area button:hover {
-  background-color: #0056b3;
+  /* background-color: #0056b3; */
+}
+
+.theme-toggle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+
+.theme-toggle:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 480px) {
@@ -80,6 +112,13 @@ h1 {
 
   .input-area button {
     padding: 10px; /* Reduce padding on smaller screens */
+  }
+}
+
+@media (max-width: 768px) {
+  .theme-toggle {
+    top: 5px;
+    right: 50px;
   }
 }
 
