--- a/app/globals.css
+++ b/app/globals.css
@@ -1,134 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* :root[data-theme="corporate"] {
-  --test-color: red;
-}
-
-:root[data-theme="business"] {
-  --test-color: blue;
-}
-
-body {
-  background-color: var(--test-color);
-} */
-
-
-.app-container {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  padding-block: 30px;
-  box-sizing: border-box; /* Includes padding in the element's total width and height */
-}
-
-.chat-container {
-  /* width: 80%;
-  max-width: 600px;
-  margin: 20px auto;
-  font-family: Arial, sans-serif; */
-
-  width: 90%;
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 17px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: white;
-  border-radius: 10px;
-}
-
-h1 {
-  text-align: center;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.chatbox {
-  height: 300px;
-  /* border: 1px solid #ffffff; */
-  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  padding: 10px;
-  /* background: #f9f9f9; */
-  margin-bottom: 20px;
-}
-
-.user-msg {
-  text-align: right;
-  color: rgb(131, 131, 131);
-}
-
-.bot-msg {
-  text-align: left;
-  color: rgb(43, 43, 43);
-}
-
-.input-area {
-  display: flex;
-  gap: 10px;
-}
-
-.input-area input {
-  flex-grow: 1;
-  padding: 10px;
-  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.input-area button {
-  min-width: 100px; /* Minimum width for the button */
-  padding: 10px 20px;
-  font-size: 16px;
-  /* background-color: #007bff; */
-  /* color: white; */
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.input-area button:hover {
-  /* background-color: #0056b3; */
-}
-
-.theme-toggle {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 1000;
-}
-
-.theme-toggle:hover {
-  opacity: 0.8;
-}
-
-@media (max-width: 480px) {
-  .input-area input, .input-area button {
-    flex-grow: 1;
-    width: auto; /* Allow both input and button to adjust based on available space */
-  }
-
-  .input-area button {
-    padding: 10px; /* Reduce padding on smaller screens */
-  }
-}
-
-@media (max-width: 768px) {
-  .theme-toggle {
-    top: 5px;
-    right: 50px;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+.bot-msg,.input-area input,.user-msg,h1{color:var(--text-color)}@tailwind base;@tailwind components;@tailwind utilities;:root{--text-color:#2F2F2F;--input-bg-color:#c7c7c7;--input-text-color:#2F2F2F;--chatbox-bg:#ffffff;--chat-container-bg-color:#fcfcfc;--app-container-bg-color:#e0e0e0;--input-button-bg-color:#a8a8a8}:root[data-theme=corporate]{--text-color:#2F2F2F;--input-bg-color:#c7c7c7;--input-text-color:#2F2F2F;--chatbox-bg:#ffffff;--chat-container-bg-color:#fcfcfc;--app-container-bg-color:#e0e0e0;--input-button-bg-color:#a8a8a8}:root[data-theme=night]{--text-color:#d3d3d3;--input-text-color:#5c5c5c;--chatbox-bg:#000000;--input-bg-color:#676767;--chat-container-bg-color:#2F2F2F;--app-container-bg-color:#171717;--input-button-bg-color:#676767}.app-container{position:relative;width:100vw;height:100vh;padding-block:30px;box-sizing:border-box;background-color:var(--app-container-bg-color)}.chat-container{width:90%;max-width:600px;margin:40px auto;padding:17px;box-shadow:0 2px 5px rgba(0,0,0,.1);background-color:var(--chat-container-bg-color);border-radius:10px}.chatbox,h1{margin-bottom:20px}.chatbox,.input-area input{padding:10px;box-shadow:inset 0 2px 5px rgba(0,0,0,.1)}h1{text-align:center}.chatbox{height:300px;overflow-y:auto;background-color:var(--chatbox-bg)}.user-msg{text-align:right}.bot-msg{text-align:left}.input-area{display:flex;gap:10px}.input-area input{flex-grow:1;border-radius:5px;font-size:16px;background-color:var(--input-bg-color)}.input-area button{min-width:100px;padding:10px 20px;font-size:16px;background-color:var(--input-button-bg-color);border:none;border-radius:5px;cursor:pointer;transition:background-color .3s}.input-area button:hover{background-color:#676767}.theme-toggle{position:absolute;top:10px;right:10px;z-index:1000}.theme-toggle:hover{opacity:.8}@media (max-width:480px){.input-area button,.input-area input{flex-grow:1;width:auto}.input-area button{padding:10px}}@media (max-width:768px){.theme-toggle{top:5px;right:50px}}@keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
